# Comparative-Study-RL-Bandit

./: .gitignore  README.md  pyproject.toml
configs/: final.toml  pilot.toml  smoke.toml
docs/: environments.md  environments.zh-CN.md  experiment-protocol.md  literature-review-simulation-data.md  meeting-log.md  project-note.md  sprint-plan.md  task-board.md
results/: README.md
src/bandit_benchmark/: __init__.py  __main__.py  cli.py  metrics.py  registry.py  results.py  runner.py
src/bandit_benchmark/algorithms/: __init__.py  base.py  exp3.py  nonstationary_ucb.py  random_policy.py  thompson.py  ucb.py
src/bandit_benchmark/environments/: __init__.py  base.py  bernoulli.py  drift.py  piecewise.py  real_data.py  stationary.py  stress.py  switching.py
tests/: test_algorithms.py  test_environments.py  test_exp3.py  test_metrics.py  test_nonstationary_ucb.py  test_runner.py  test_thompson.py  test_ucb.py
